<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activity.AppsActivity">

        <!-- 自定义轻量标题栏（替代原生 ActionBar） -->
        <LinearLayout
            android:id="@+id/cl_custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                style="@style/CustomTitleTextStyle"
                android:text="@string/title_activity_apps" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_bottom_actions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_custom_title" />

        <TextView
            android:id="@+id/tv_loading"
            style="@style/defTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintBottom_toBottomOf="@id/rv_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/rv_list" />

        <LinearLayout
            android:id="@+id/ll_bottom_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/btn_save"
                style="@style/defButtonStyle"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/btn_save" />

            <Button
                android:id="@+id/btn_back"
                style="@style/defButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/btn_back" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
